codigo atualizado e nova combinação de cores

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,6 @@
     <title>Controle Financeiro Pessoal</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="root" id="root"></div>
   </body>
 </html>
